# movie_challenge

./: .gitignore  README.md  challenge.ipynb  main.py  pyproject.toml
